# 2_1_Cache_LIRS

./: CMakeLists.txt  Readme.md  cache.cpp  cache.inl  main.cpp  perfect_cache.inl  test.cpp  test_data.txt
src/: compare.cpp  main.cpp  test.cpp
src/headers/: cache.hpp  perfect_cache.hpp
